--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [
+    "productn": [
       ">0.2%",
       "not dead",
       "not op_mini all"
